--- a/autoservice/index.html
+++ b/autoservice/index.html
@@ -312,37 +312,37 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="img/_ex_1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex_1.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>				
