--- a/autoservice/index.html
+++ b/autoservice/index.html
@@ -312,7 +312,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="hi_item">
-						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
+						<a href="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_exhttp://res.cloudinary.com/du9jpzwmp/image/upload/v1501008419/_ex_2_hnnfhi.jpg" class="fancybox" data-fancybox-group="group"><img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501007858/_ex_1_ekumeu.jpg" alt="alt"/></a>
 						<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.</p>
 					</div>
 				</div>
@@ -396,7 +396,7 @@
 				</nav>
 			</div>
 			<div class="col-mf-2">
-				<img src="img/_ex_2.jpg" alt="alt">
+				<img src="http://res.cloudinary.com/du9jpzwmp/image/upload/v1501008419/_ex_2_hnnfhi.jpg" alt="alt">
 			</div>
 		</div>
 	</div>
