--- a/golden/index.html
+++ b/golden/index.html
@@ -45,23 +45,35 @@
 <div class="container">
 	<div class="title">
 		<h2>Services</h2>
-		<p>Ffkfkfkkfkfkfkfkkfkfkfkfkf.</p>
+		<p>Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni.</p>
 	</div>
 	<div class="services clearfix">
 		<div class="sercices_item">
 			<img src="img/icon1.png" alt="Услуга">
 			<h3>E-commerce</h3>
-			<p>Gkgkgkgkkgkgkkgkg.</p>
+			<p>Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni.</p>
 		</div>
 		<div class="sercices_item">
 			<img src="img/icon2.png" alt="Услуга">
 			<h3>Responsive Web</h3>
-			<p>Gkgkgkgkkgkgkkgkg.</p>
+			<p>Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni..</p>
 		</div>
 		<div class="sercices_item">
 			<img src="img/icon3.png" alt="Услуга">
 			<h3>Web Security</h3>
-			<p>Gkgkgkgkkgkgkkgkg.</p>
+			<p>Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni.</p>
 		</div>
 	</div>
 </div>	
@@ -73,7 +85,10 @@
 			Our portfolio
 		</h2>
 		<p>
-			Pdjmdkdkdkdkdkdkkddd.
+			Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni.
 		</p>
 	</div>
 	<div class="works clearfix">
@@ -85,12 +100,16 @@
 </section>
 <section id="aboutus">
 <div class="container">
+<div class="row">
 	<div class="title">
 		<h2>
 			About us
 		</h2>
 		<p>
-			Pdjmdkdkdkdkdkdkkddd.
+			Proin iaculis purus consequat sem cure 
+digni ssim. Donec porttitora entum suscipit 
+aenean rhoncus posuere odio in tincidunt. Proin 
+iaculis purus consequat sem cure digni.
 		</p>
 	</div>
 	<div class="history clearfix">
@@ -145,28 +164,23 @@ iaculis purus consequat sem cure digni.
 			</div>
 		</div>
 	</div>
-	<div class="history_item">
-			<div class="text">february 2014</div>
-				<h4>Our Triumph</h4>
-				<p class="one">Proin iaculis purus consequat sem cure 
-digni ssim. Donec porttitora entum suscipit 
-aenean rhoncus posuere odio in tincidunt. Proin 
-iaculis purus consequat sem cure digni 
-ssim. Donec porttitora entum suscipit aenean.
-				</p>
-			<div class="images">
-				<img src="img/about4.jpg" alt="">
-			</div>
-		</div>
+
 	</div>
 </div>	
 </section>
-<section>
-<div class="container"></div>	
-</section>
 <footer>
-<div class="container"></div>	
+<div class="container">
+<ul class="social">
+	<li><a href="#" target="_blank">Home</a></li>
+	<li><a href="#" target="_blank">Services</a></li>
+	<li><a href="#" target="_blank">Portfolio</a></li>
+	<li><a href="#" target="_blank">About</a></li>
+	<li><a href="#" target="_blank">Contact</a></li>
+</ul>
+</div>	
 </footer>
-	
+<footer class="second">
+<p>&copy; Golden</p>
+</footer>	
 </body>
 </html>
